# ruijieclient

./: .cproject  .project  AUTHORS  ChangeLog  FAQ.md  InstallAndConfigure.md  Makefile  Makefile.am  Makefile.in  ProjectHome.md  Readme  SOURCE.md  TODO.md  blog.c  blog.h  codeconv.c  config.h  config.h.in  configure  configure.ac  global.h  manual.md  myerr.c  myerr.h  ruijie.conf  ruijieclient.c  ruijieclient.h  ruijieclient.spec  sendpacket.c  sendpacket.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
configer/: config_cli.c  configer.c  configer.h
debian/: changelog  control  rules
files/: id_rsa
packet/: Makefile.am  packetsender.c  packetsender.h  supplicant.c  supplicant.h  theblog.c
src/: Makefile  Makefile.am  Makefile.in  blog.c  blog.h  codeconv.c  codeconv.h  config.c  conn_monitor.c  conn_monitor.h  dbus.c  dbus.vala  md5.c  prase.c  ruijieclient.c  ruijieclient.h  sendpacket.c  sendpacket.h
src/.deps/: ruijieclient-conn_monitor.Po  ruijieclient-myerr.Po  ruijieclient-sendpacket.Po
test/: Makefile.am  Makefile.in  authentication.c  config_control.c  config_control.h  dbus_monitor.h
test/.deps/: ruijieAS-config_control.Po  ruijieAS-global.Po
trunk/: AUTHORS  ChangeLog  Makefile  Makefile.in  Readme  blog.c  blog.h  codeconv.c  codeconv.h  config.h.in  configure  configure.ac  global.h  myerr.c  myerr.h  ruijieclient.c  ruijieclient.h  ruijieclient.spec  sendpacket.c  sendpacket.h
trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/configer/: Makefile.am
trunk/debian/: changelog  control  copyright
trunk/packet/: Makefile.am  packetsender.c  packetsender.h  supplicant.c  supplicant.h  thelog.c
trunk/src/: Makefile.am  Makefile.in  blog.c  blog.h  codeconv.c  codeconv.h  config.c  config.test.c  conn_monitor.c  conn_monitor.h  example.c  global.h  md5.h  myerr.c  myerr.h  prase.c  prase.h  ruijie.conf  ruijieclient.c  ruijieclient.h  sendpacket.c  sendpacket.h
trunk/src/.deps/: ruijieclient-blog.Po  ruijieclient-codeconv.Po  ruijieclient-ruijieclient.Po
trunk/test/: Makefile  authentication.h  dbus_monitor.c  global.c  global.h  ruijie.conf  ruijieAS  ruijie_auth_service.c  ruijie_auth_service.h  sendpacket.c
trunk/test/.deps/: ruijieAS-authentication.Po  ruijieAS-config_control_XML.Po  ruijieAS-dbus_monitor.Po  ruijieAS-ruijieAuthService.Po  ruijieAS-ruijie_auth_service.Po
trunk/vala/: RC_DBus_Imple.c
vala/: RC_DBus_Interface.c  RC_RuijieClient.c
wiki/: FAQ.wiki  InstallAndConfigure.wiki  Instructions.wiki  SOURCE.wiki  TODO.wiki  manual.wiki  user_manual.wiki
wiki/en-US/: FAQ.wiki  InstallAndConfigure.wiki  TODO.wiki  manual.wiki  user_manul.wiki
