AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = ruijieclient
ruijieclient_SOURCES = blog.c codeconv.h myerr.c ruijieclient.h  \
		sendpacket.h blog.h global.h  myerr.h codeconv.c ruijieclient.c sendpacket.c \
		 conn_monitor.c conn_monitor.h prase.c prase.h md5.c md5.h \
		 config.c
		 
ruijieclient_LDADD = 
ruijieclient_CFLAGS = -I $(XML_INCLUDE)
